@@ -1,7 +1,8 @@
 0.2 (May ? 2018)
- -KC7 internal-only release of KC7 crosscut metadata model for GTEx v7 public RNA-Seq metadata.
+ -KC7 internal-only v0.2 release of KC7 crosscut metadata model for GTEx v7 public RNA-Seq metadata.
  -RNA extract Materials are now linked to the top-level Dataset via the 'isAbout' attribute.
- -Added DataAnalysis objects to Datasets via 'producedBy' attribute.
+ -New DataAnalysis objects are now linked to Datasets via the 'producedBy' attribute.
+ -All applicable object types now have @id and @context properties.
 	
 0.1 (May 4 2018)
  -Initial KC7 internal-only release of KC7 crosscut metadata model for GTEx v7 public RNA-Seq metadata.
